Fixes several issues with EssenceDate editor.
* The preview_text was missing an argument
* The jQuery-UI Datepicker select boxes where broken in Firefox.
* Passes `default_value` option to `alchemy_datepicker` helper

--- a/app/assets/stylesheets/alchemy/jquery-ui.scss
+++ b/app/assets/stylesheets/alchemy/jquery-ui.scss
@@ -1244,7 +1244,8 @@
   display: none;
 
   select {
-    height: 19px;
+    height: 20px;
+    padding: 1px;
   }
 }
 
